// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package example

import (
	context "context"
	client "sdk/client"
	option "sdk/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.GetMovie(
		context.TODO(),
		"movie_xyz",
	)
}
"
`;

exports[`imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package example

import (
	context "context"
	sdk "sdk"
	client "sdk/client"
	option "sdk/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.CreateMovie(
		context.TODO(),
		&sdk.CreateMovieRequest{
			Title:  "The Matrix",
			Rating: 8.2,
		},
	)
}
"
`;
